Numerical integration boilerplate plus test cases, for students to fill in the implementation in a TDD manner.

--- a/C++/src/CMakeLists.txt
+++ b/C++/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add source directories
 set(source_directories
         derivatives
+        integration
         optimisers
         test_functions
     )
