--- a/C++/unit_tests/CMakeLists.txt
+++ b/C++/unit_tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(UnitTests PRIVATE
         test_cg_arma.cpp
         test_cg_class.cpp
+        test_integration.cpp
         test_test_functions.cpp
 )
